fix | AiToolCallContext中List.of/Map.of替换为Java8兼容API